<resources>
    <string name="desc"></string>
    <string name="country_code">en</string>
    <string name="app_name">demo</string>
    <string name="app_ver">5.6</string>
    <string name="app_notice">Smart View, Smart Life</string>
    <string name="alarm_notice">There is a new alarm notification message</string>
    <string name="pull_to_search">Drop down to search for local device.</string>
    <string name="pull_to_refresh_pull_label">Drop down to search for device.</string>
    <string name="pull_to_refresh_release_label">Release to search for device.</string>
    <string name="pull_to_refresh_refreshing_label">Searching&#8230;</string>
    <string name="str_PasswordIsNil">Password is empty.</string>
    <string name="str_AcountInfoNil">The account information isn\'t editted, using the default account.</string>
    <string name="str_login">Login</string>
    <string name="str_wifi_list">WIFI list</string>
    <string name="str_secured_type">Encryption types</string>
    <string name="str_secured_type_open">Open</string>
    <string name="str_visible_pwd">Visible password</string>
    <string name="str_hiden_pwd">Hide password</string>
    <string name="str_secured_with">Encryption ways：</string>
    <string name="notice_DevIsNULL">The device ID can\'t be empty</string>
    <string name="notice_DomainIsNULL">The device address can\'t be empty</string>
    <string name="notice_UsernameIsNULL">User name can\'t be empty</string>
    <string name="notice_PortIsNULL">Port can\'t be empty</string>
    <string name="notice_PasswordIsNULL">Password can\'t be empty</string>
    <string name="alert_title_login_failed">Login failed!</string>
    <string name="alert_connect_tips">Please pull down the screen to try to connect again. If failed, please check your network connection.</string>
    <string name="alert_title">Notification</string>
    <string name="alert_btn_OK">Confirm</string>
    <string name="alert_btn_Cancel">Cancel</string>
    <string name="alert_add_btn_OK">Confirm add</string>
    <string name="alert_add_btn_Cancel">Cancel</string>
    <string name="alert_btn_YES">YES</string>
    <string name="alert_btn_NO">NO</string>
    <string name="alert_clear_list">Do you like to clean device list?</string>
    <string name="alert_delete_server">Do you like to delete the device?</string>
    <string name="alert_set_config_ok">Configuration change successful</string>
    <string name="alert_open_setting_view">WIFI mode or configuration of the device is changed. Do you like to open network setting to change your WIFI connection?</string>
    <string name="alert_open_setting_view_ap">Warm tips: Headend equipment is in AP hot spot mode. If you need to connect to it, please click "confirm" to change you WIFI connection configuration.</string>
    <string name="alert_get_config_fail">Configuration acquisition failed</string>
    <string name="alert_set_config_fail">Changing configuration failed</string>
    <string name="alert_username_is_invalide">User name can\'t be empty</string>
    <string name="alert_password_err">Original password input is wrong.</string>
    <string name="alert_password_confirm_err">New password entered differently twice.</string>
    <string name="alert_stop_play">Whether to stop receiving video?</string>
    <string name="alert_station_password_is_null">Password is required.</string>
    <string name="alert_ap_name_is_null">AP name is required.</string>
    <string name="alert_station_name_is_null">Station name is required.</string>
    <string name="result_code_conn_fail">The device connection failed</string>
    <string name="login_Result_MR_Server_Busy">Server is busy now, please try again later.</string>
    <string name="login_Result_MR_Server_Disconnet">Connection to the front end device has disconnected.</string>
    <string name="login_Result_ConnectTimeout">Connection timed out.</string>
    <string name="notice_Result_ConnectServerFailed">The device connection failed.</string>
    <string name="notice_Result_PWD_ERR_AP">AP password is required to be empty or greater than or equal to 8 characters.</string>
    <string name="notice_Result_PWD_ERR_Station">Station password is required to be empty or greater than or equal to 8 characters.</string>
    <string name="notice_Result_PWD_ERR">Password is required to be empty or greater than or equal to 8 characters.</string>
    <string name="notice_Result_NOPRI">Insufficient permissions.</string>
    <string name="notice_Result_UserNoExist">The user does not exist.</string>
    <string name="notice_Result_PWDError">User name or password is wrong.</string>
    <string name="notice_Result_BadResult">Data corruption.</string>
    <string name="notice_Result_NetError">Network connection failed!</string>
    <string name="notice_Result_Server_Offline">The front end device is offline.</string>
    <string name="notice_Result_VerifyFailed">Validation error.</string>
    <string name="notice_Result_Old_Version">The front end device version doesn\'t support.</string>
    <string name="toast_last_page">Already the last page</string>
    <string name="toast_first_page">Already the first page</string>
    <string name="toast_add_in_list">Already added to the list</string>
    <string name="toast_remove_from_list">Already deleted from list</string>
    <string name="toast_network_unreachable">Network connection is unuseful, please check network setting.</string>
    <string name="toast_list_is_null">The device list is empty, please add device</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="name">Name:</string>
    <string name="server">The device address:</string>
    <string name="port">Port:</string>
    <string name="username">User name:</string>
    <string name="password">Password:</string>
    <string name="password_old">Original password:</string>
    <string name="password_new">New password:</string>
    <string name="password_confirm">Confirm password:</string>
    <string name="autologin">Login automatically</string>
    <string name="record_info">Remenber login information</string>
    <string name="norecord">No input record</string>
    <string name="nameHint">Input a name here</string>
    <string name="serverHint">Please enter the device address</string>
    <string name="portHint">Please enter receive port</string>
    <string name="usernameHint">Please enter user name</string>
    <string name="passwordHint">Please enter password</string>
    <string name="btn_login">Login</string>
    <string name="btn_serverList">The device list</string>
    <string name="btn_back">Return</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_add">Add</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_finish">Complete</string>
    <string name="btn_search">Search</string>
    <string name="btn_research">Search for device</string>
    <string name="btn_addtolist">Add to the list</string>
    <string name="btn_IsInlist">Already added to the list</string>
    <string name="btn_save">Save</string>
    <string name="btn_save_setting">Set</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">Confirm</string>
    <string name="btn_add_qr">Add QR code</string>
    <string name="btn_stop_all">Stop</string>
    <string name="btn_stop_play">Stop</string>
    <string name="btn_start_play">Get</string>
    <string name="btn_one_key_sync">Same as mobile phone time</string>
    <string name="btn_save_time">Set time</string>
    <string name="btn_get_from_list">Choose from local WIFI</string>
    <string name="title_add_device">Add device</string>
    <string name="title_Edit_device">Modify device</string>
    <string name="searching">Searching for device&#8230;</string>
    <string name="searchcancel">Search is canceled</string>
    <string name="has">Search to</string>
    <string name="device_found">A device is found</string>
    <string name="logining">Login&#8230;</string>
    <string name="Notification_To_Login">The device does not login</string>
    <string name="Notification_Playing_Chn">Viewing：</string>
    <string name="str_Notic_Close_APP">Do you like to quit the program?</string>
    <string name="str_serverList">Device list</string>
    <string name="notice_RecvDataFailed">Connection failed.</string>
    <string name="notice_RecvStop">Connection to the front end device has disconnected.</string>
    <string name="str_Select_To_Play">Please choose the viewing channel</string>
    <string name="str_PlayingChn">Watching channel：</string>
    <string name="wifi_mode">WIFI Mode:</string>
    <string name="wifi_mode_ap">AP</string>
    <string name="wifi_mode_station">Station</string>
    <string name="wifi_mode_ap_setting">AP mode (hot spot mode. router is not required)</string>
    <string name="wifi_current_mode">Current mode:</string>
    <string name="wifi_mode_station_setting">Station mode (router connection mode)</string>
    <string name="server_config">Device information settings</string>
    <string name="local_config">Local settings:</string>
    <string name="remote_config">Remote settings:</string>
    <string name="config_base">Device basic settings</string>
    <string name="config_network">Network settings</string>
    <string name="config_record">Recording settings</string>
    <string name="config_time">Date &amp; Time setting</string>
    <string name="config_user">User management</string>
    <string name="config_alarm_prompt">Alarm setting</string>
    <string name="station_current_wifi">WIFI settings:</string>
    <string name="record_auto_record_title">Auto record</string>
    <string name="record_record_open">Open</string>
    <string name="record_record_close">Close</string>
    <string name="record_alarm_record_title">Alarm video</string>
    <string name="record_record_full_op">Video full operation:</string>
    <string name="record_record_full_op_recorver">Overwrite the old files</string>
    <string name="record_record_full_op_stop">Stop video</string>
    <string name="date_current">Date:</string>
    <string name="time_current">Time:</string>
    <string name="device_time_current">Current device time</string>
    <string name="set_time">Time setting</string>
    <string name="set_date">Date setting</string>
    <string name="add_device">Add new equipment：</string>
    <string name="editingDevice">Modify device</string>
    <string name="deleteDevice">Delete device</string>
    <string name="relecanceLevelHigh">High</string>
    <string name="relecanceLevelMedium">Medium</string>
    <string name="relecanceLevelLow">Low</string>
    <string name="relecanceTypeRKE">RKE</string>
    <string name="relecanceTypeSmoke">Smoke</string>
    <string name="relecanceTypeMove">Move</string>
    <string name="relecanceName">Name</string>
    <string name="relecanceAddressCode">Address code</string>
    <string name="relecanceDeviceList">Alarm device list</string>
    <string name="relecanceDeviceAdd">Searching for alarm device, please trigger alarm device you need to add</string>
    <string name="relecanceInputName">Please enter alarm device name</string>
    <string name="relecanceType">Alarm type</string>
    <string name="relecanceLevel">Alarm level</string>
    <string name="relecanceGAS">GAS</string>
    <string name="relecanceOther">Others</string>
    <string name="relecanceFeeling">Feelings</string>
    <string name="relecancePreset">Preset position association</string>
    <string name="relecanceAlarmOffOrOn">Alarm off/on</string>
   	<string name="str_false_positive_head">Wrong alarm:</string>
   	<string name="str_false_positive_body1">1.There\'s someone in the picture， but the red box doesn\'t select one</string>
    <string name="str_false_positive_body2">2.There\'s nobody in the picture， but the red box still select something</string>
</resources>