<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ap_connect_popuwindow_bg" >
    
    <TextView android:id="@+id/tvAPConnect" android:layout_width="match_parent" android:layout_height="40dip" android:text="@string/add_device" android:textColor="@color/font_color_white" 
        android:textSize="16sp" android:gravity="center" android:background="@drawable/background_title"/>
    
    <LinearLayout android:layout_width="match_parent" android:layout_height="60dip" android:orientation="horizontal" android:gravity="center" >
    
       <TextView android:layout_width="0dip" android:layout_height="40dip" android:layout_weight="1" android:text="@string/password"
           android:textColor="@color/font_color_black" android:textSize="16sp" android:gravity="center"  />
       <EditText android:id="@+id/etAPConnect" android:layout_width="0dip" android:layout_height="40dip" android:layout_weight="3" android:background="@drawable/edittext_input_blue"
         	 android:layout_marginRight="5dip" android:hint="@string/passwordHint" android:paddingLeft="5dip" android:inputType="textPassword"
         	 android:textColor="@color/font_color_black" android:textSize="14sp"/>
       
    </LinearLayout>
     
    <RelativeLayout android:layout_width="match_parent" android:layout_height="50dip" android:orientation="horizontal" >
       
        <ImageView android:id="@+id/ivAPConnect" android:layout_width="30dip" android:layout_height="30dip" android:src="@drawable/delete_choose_1" android:contentDescription="@string/add_device"
             android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:layout_marginLeft="20dip"/>
      
       <TextView android:layout_width="wrap_content" android:layout_height="50dip"  android:text="@string/str_visible_pwd" android:textColor="@color/font_color_black"
           android:textSize="16sp" android:gravity="left|center" android:layout_centerVertical="true" android:layout_toRightOf="@id/ivAPConnect" android:layout_marginLeft="10dip" />
       
    </RelativeLayout>
    
   <RelativeLayout android:layout_width="match_parent" android:layout_height="50dip" android:orientation="horizontal" android:gravity="center" android:background="@null">
       
          <Button android:id="@+id/btnAPConnect" android:layout_width="100dip" android:layout_height="40dip" android:background="@drawable/delete_save_btn" android:text="@string/alert_btn_OK"
              android:textColor="@color/font_color_white" android:textSize="16sp" android:layout_alignParentLeft="true" android:layout_marginLeft="30dip" />
          
          <Button android:id="@+id/btnAPBack" android:layout_width="100dip" android:layout_height="40dip" android:background="@drawable/delete_save_btn" android:text="@string/alert_btn_Cancel"
              android:textColor="@color/font_color_white" android:textSize="16sp" android:layout_alignParentRight="true" android:layout_marginRight="30dip"/>
          
   </RelativeLayout>

</LinearLayout>
