<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="100dp"
    android:background="@drawable/tip_box"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/font_color_gray"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="14sp"
        android:text="@string/str_false_positive_head" />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/font_color_gray"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/str_false_positive_body1"
        android:textSize="13sp" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/font_color_gray"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/str_false_positive_body2"
        android:textSize="13sp" />
    
</LinearLayout>
